# TeachNet_Teleoperation

./: .gitignore  README.md  demo_moveit.py  demo_robot_safe.py  demo_robot_unsafe.py  demo_teachnet.py  main.py  main_baseline_human.py  main_baseline_shadow.py  main_gan.py  shadow_demo.py  shadow_demo_moveit.py  shadow_demo_unsafe.py
evaluation/: .gitignore  README.md  cartesian2uvd.py  eval_angle.py  eval_dist.py  eval_error_bar.py
model/: __init__.py  dataset.py  model.py
ros/src/shadow_teleop/: CMakeLists.txt  package.xml
ros/src/shadow_teleop/launch/: multi_shadow_sim_bio.launch  real_demo.launch  shadow_fk.launch  sim_demo.launch
ros/src/shadow_teleop/scripts/: dataset_9_view_check_pic.py  depth_image_crop.py  generate_joint_angles_moveit_test.py  human_robot_mappingfile.py  shadow_cartesian2uvd.py  utils_dataset.py
ros/src/shadow_teleop/src/: collision_free_goal.h  interpolate_traj_service.cpp  moveit_multi_bioik_dataset.cpp  shadow_fk_service.cpp  shadow_forward_kinematics.cpp
ros/src/shadow_teleop/srv/: checkSelfCollision.srv  fk.srv
ros/src/teleop_motorhand/: .setup_assistant  CMakeLists.txt  package.xml
ros/src/teleop_motorhand/config/: controllers.yaml  fake_controllers.yaml  generated_shadowhand.urdf  joint_limits_template.yaml  kinematics.yaml  kinematics_bioik_template.yaml  kinematics_kdl_template.yaml  kinematics_template.yaml  kinematics_tracik_template.yaml  ompl_planning.yaml  ompl_planning_template.yaml  ros_controllers.yaml  sensors_rgbd.yaml  shadowhand.srdf  shadowhand.srdf.xacro  shadowhands_prefix.srdf.xacro  tams_motorhand.srdf
ros/src/teleop_motorhand/default_warehouse_mongo_db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-13--2960149436039844945.wt  collection-2--2960149436039844945.wt  index-14--2960149436039844945.wt  index-3--2960149436039844945.wt  sizeStorer.wt
ros/src/teleop_motorhand/default_warehouse_mongo_db/diagnostic.data/: metrics.2020-09-02T18-34-53Z-00000  metrics.2020-09-03T08-46-59Z-00000  metrics.2020-09-03T08-49-03Z-00000  metrics.2020-09-03T08-51-02Z-00000  metrics.2020-09-03T09-06-38Z-00000  metrics.2020-09-03T09-09-03Z-00000  metrics.2020-09-03T09-44-59Z-00000  metrics.2020-09-03T09-54-39Z-00000  metrics.2020-09-03T10-00-29Z-00000  metrics.2020-09-03T10-05-47Z-00000  metrics.2020-09-03T10-12-23Z-00000  metrics.2020-09-03T11-58-44Z-00000  metrics.2020-09-03T12-04-19Z-00000  metrics.2020-09-03T12-15-33Z-00000  metrics.2020-09-03T12-25-31Z-00000  metrics.2020-09-03T12-42-33Z-00000  metrics.2020-09-03T12-51-39Z-00000  metrics.2020-09-03T12-54-07Z-00000  metrics.2020-09-03T13-41-00Z-00000  metrics.2020-09-04T07-58-52Z-00000  metrics.2020-09-04T09-38-49Z-00000  metrics.2020-09-04T09-39-20Z-00000
ros/src/teleop_motorhand/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_and_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  shadow.launch  shadowhand_motor_moveit_controller_manager.launch.xml  shadowhand_motor_moveit_sensor_manager.launch.xml  tams_motorhand_moveit_controller_manager.launch.xml  tams_motorhand_upload.launch  trajectory_execution.launch.xml  warehouse.launch
ros/src/teleop_motorhand/robots/: tams_motorhand.urdf.xacro
ros/src/teleop_motorhand/scripts/: timed_roslaunch.sh
ros/src/teleop_motorhand/urdf/: biotac.urdf.xacro  tams_motorhand.urdf.xacro
ros/src/teleop_motorhand/worlds/: shadowhand_multiview.world
utils/: __init__.py  camera_depth_images_test.py  depth2im.py  (+5 more)
