<?xml version="1.0"?>
<package>
  <name>teleop_motorhand</name>
  <version>0.0.0</version>
  <description>launch files for TAMS' motorhand</description>

  <maintainer email="goerner@informatik.uni-hamburg.de">Michael Goerner</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

</package>
